--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,23 @@
-mat-card {
-    max-width: 400px;
-    margin: 2em auto;
-    text-align: center;
-  }
-  
-  mat-form-field {
+:host {
     display: block;
-  }
+    margin-top: 1rem;
+}
+mat-form-field,
+textarea {
+    width: 100%;
+    margin-left: 0;
+}
+
+button {
+    width: 10rem;
+}
+
+mat-error {
+    font-size: 1rem;
+}
+
+mat-panel-title,
+mat-panel-description,
+span {
+  display: block;
+}
