--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,34 @@
-<h2>The form</h2>
-  <form #f="ngForm" name="theForm">
-    <div class="form-group">
-      <label>Model</label>
-      <input type="text"
-            class="form-control"
-            name="username"
-            [(ngModel)]="username"
-            #username="ngModel"
+<mat-card>
+    <form>
+        <mat-form-field>
+            <input
+            matInput
+            type="text"
+            name="usr"
+            #usr
             required
-            pattern="^[a-zA-Z ]+$">
-      <span style="color: red" *ngIf="username.errors?.['required'] && username.touched">
-        The username is required
-      </span>
-      <span style="color: red" *ngIf="username.errors?.['pattern'] && username.touched">
-        The username can only contain the letters a-z or A-Z
-      </span>
-    </div>
-
-    <div class="form-group">
-      <label>Price</label>
-      <input type="number"
-            class="form-control"
-            name="password"
+            minlength="8"
+            placeholder="Username"
+            [(ngModel)]="username">
+            <mat-error *ngIf="usr.invalid">Inserire username (min. 8 lettere)</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <input
+            matInput
+            name="psw"
+            #psw
+            ngModel
             required
-            [(ngModel)]="password"
-            #password="ngModel">
-      <span style="color: red" *ngIf="password.errors?.['required'] && password.touched">
-        The password is required
-      </span>
-    </div>
-
-    <button  [disabled]="f.invalid">Add</button>
-  </form>
+            minlength="8"
+            placeholder="Password"
+            [(ngModel)]="password">
+            <mat-error *ngIf="psw.invalid">Inserire password (min. 8 lettere)</mat-error>
+        </mat-form-field>
+        <button
+            mat-raised-button
+            color="primary"
+            type="sumbit">
+            Save Comment
+        </button>
+    </form>
+</mat-card>
