--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,12 @@
   </span>
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
     <button mat-button routerLink="login">
-      <mat-icon>power_settings_new</mat-icon>
+      <mat-icon>account_circle</mat-icon>
       Login
     </button>
     <button mat-button>
-      <mat-icon>exit_to_app</mat-icon>
-      Logout
-    </button>
-    <button mat-button>
-      <mat-icon>gamepad</mat-icon>
-      Play
+      <mat-icon>person_add</mat-icon>
+      Register
     </button>
   </div>
 </mat-toolbar>
