--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <mat-icon>account_circle</mat-icon>
       Login
     </button>
-    <button mat-button>
+    <button mat-button routerLink="register">
       <mat-icon>person_add</mat-icon>
       Register
     </button>
