--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <mat-toolbar color="primary" fxLayout="row" fxLayoutAlign="space-between center">
-  <span>
-    <button mat-button routerLink="">{{title}}</button>
-  </span>
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
-    <button mat-button routerLink="login">
+    <button mat-button routerLink="">
       <mat-icon>account_circle</mat-icon>
       Login
     </button>
