--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form (submit)="login()">
+<form (submit)="gestore.login()">
     <mat-form-field>
         <input
         matInput
@@ -8,7 +8,7 @@
         required
         minlength="4"
         placeholder="Username"
-        [(ngModel)]="username">
+        [(ngModel)]="gestore.username">
         <mat-error>Inserire username (min. 8 lettere)</mat-error>
     </mat-form-field>
     <mat-form-field>
@@ -20,7 +20,7 @@
         required
         minlength="4"
         placeholder="Password"
-        [(ngModel)]="password">
+        [(ngModel)]="gestore.password">
         <mat-error>Inserire password (min. 8 lettere)</mat-error>
     </mat-form-field>
     <div style="text-align: center;">
